methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:3: error: not found: value faireV
faireV() 
^